<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="170dp"/>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabDots"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-5dp"
        app:tabBackground="@drawable/tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"/>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_below="@id/viewpager"
        android:id="@+id/recyclerLayout_Start">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_start1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progress_text"
            android:text="@string/loading"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_marginTop="2dp"
        android:layout_below="@id/recyclerLayout_Start">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_start2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progress_text2"
            android:text="@string/loading"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:contentDescription="@string/button_studium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            android:id="@+id/imageButton_Studium"
            android:src="@drawable/ic_menu_studium"/>

        <ImageButton
            android:contentDescription="@string/button_aktuelles"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            android:id="@+id/imageButton_Aktuelles"
            android:src="@drawable/ic_menu_veranstaltungen"/>

        <ImageButton
            android:contentDescription="@string/button_orientierung"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            android:id="@+id/imageButton_Orientierung"
            android:src="@drawable/ic_menu_orientierung"/>

        <ImageButton
            android:contentDescription="@string/button_vorlesungsplan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            android:id="@+id/imageButton_Vorlesungsplan"
            android:src="@drawable/ic_menu_vorlesungsplan"/>

        <ImageButton
            android:contentDescription="@string/button_mensa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:scaleType="fitCenter"
            android:id="@+id/imageButton_Mensa"
            android:src="@drawable/ic_menu_mensa"/>

    </LinearLayout>

</RelativeLayout>